# Coordinator

./: CMakeLists.txt  README.md  add_node.cpp  coordinator.cpp  coordinator.hpp  fill_tree.cpp  main.cpp  node.hpp  print_tree.cpp  runnable.cpp  suite1.cpp  suite2.cpp  suite_first.hpp  suite_main.cpp  suite_second.hpp  suite_third.hpp  suites.cpp  suites.hpp  test1.cpp  test1.hpp  test2.cpp  test2.hpp  test3.cpp  test3.hpp  test_list.hpp  tests.cpp  tests.hpp
